force-app/main/default/objects/Compensation_Rate__c/Compensation_Rate__c.object-meta.xml
<CustomObject>
    <description>Defines a specific compensation rule (amount/percent, criteria) under a compensation plan.</description>
    <label>Compensation Rate</label>
    <pluralLabel>Compensation Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Compensation Rate Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>