force-app/main/default/objects/Compensation_Rate__c/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <description>What type of records this plan is primarily intended to pay on.</description>
    <label>Applies To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>

            <value>
                <fullName>Sales_Order__c</fullName>
                <label>Sales Order</label>
            </value>
            <value>
                <fullName>Sales_Order_Line__c</fullName>
                <label>Sales Order Line</label>
            </value>
            <value>
                <fullName>WorkOrder</fullName>
                <label>Work Order</label>
            </value>
            <value>
                <fullName>WorkOrderLineItem</fullName>
                <label>Work Order Line</label>
            </value>
            <value>
                <fullName>Time_Entry__c</fullName>
                <label>Time Entry</label>
            </value>
            <value>
                <fullName>Project__c</fullName>
                <label>Project</label>
            </value>
            <value>
                <fullName>Project_Task__c</fullName>
                <label>Project Task</label>
            </value>
            <value>
                <fullName>Project_Billing_Line__c</fullName>
                <label>Project Billing Line</label>
            </value>

        </valueSetDefinition>
    </valueSet>
</CustomField>