force-app/main/default/objects/Compensation_Rate__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Compensation Rates</relationshipLabel>
    <relationshipName>Business_Unit_Compensation_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>