force-app/main/default/objects/Compensation_Rate__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Compensation Rates</relationshipLabel>
    <relationshipName>Product_Compensation_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>