force-app/main/default/objects/Compensation_Rate__c/fields/Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rate_Amount__c</fullName>
    <description>Calculated rate amount based on the selected Rate Type.</description>
    <label>Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>