force-app/main/default/objects/Compensation_Rate__c/fields/Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>Rate_Basis__c</fullName>
    <description>Primary basis for this rate&apos;s compensation.</description>
    <label>Rate Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
                <default>true</default>
                <label>Hourly</label>
            </value>
            <value>
                <fullName>Flat Per Record</fullName>
            </value>
            <value>
                <fullName>Flat Per Unit</fullName>
            </value>
            <value>
                <fullName>Percent of Sale</fullName>
            </value>
            <value>
                <fullName>Percent of Receivable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>