force-app/main/default/objects/Compensation_Rate__c/fields/Rate_Value__c.field-meta.xml
<CustomField>
    <fullName>Rate_Value__c</fullName>
    <description>
        Numeric value used by the calculation method. For flat methods this is a currency amount
        (per hour, per record, per unit). For percent methods this is a percentage (e.g. 20.00 = 20%).
    </description>
    <label>Rate Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>