force-app/main/default/objects/Compensation_Rate__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Compensation Rates</relationshipLabel>
    <relationshipName>Work_Type_Compensation_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>